--- a/index.html
+++ b/index.html
@@ -52,6 +52,13 @@
         </ul>
       </div>
     </div>
+    <div id="terminal" tabindex='1'>
+      <div id="log">
+        <ul id="lines"></ul>
+        <span>&gt; </span><span id="input"></span><span id="caret">0</span>
+      </div>
+    </div>
   </div>
+  <script type="text/javascript" src="terminal.js"></script>
 </body>
 </html>
