--- a/index.html
+++ b/index.html
@@ -59,6 +59,6 @@
       </div>
     </div>
   </div>
-  <script type="text/javascript" src="terminal.js"></script>
+  <script src="terminal.js"></script>
 </body>
 </html>
