sorry banggood you got demoted

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <ul>
           <li><a href="http://amazon.com">amazon</a></li>
           <li><a href="http://ebay.com">ebay</a></li>
-          <li><a href="http://banggood.com">banggood</a></li>
+          <li><a href="http://massdrop.com">massdrop</a></li>
         </ul>
       </div>
       <div class="bordered">
