convert the new tab extension into a redirect

--- a/newtab.html
+++ b/newtab.html
@@ -4,5 +4,5 @@
     <meta charset="UTF-8">
     <title></title>
   </head>
-  <body><script src="newtab.js"></script></body>
+  <body><script>window.location.href='http://jaswon.tech/landing/'</script></body>
 </html>
