use secure search form

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div id="container" class="bordered">
-    <form id="search" class="bordered" method="get" action="http://www.google.com/search">
+    <form id="search" class="bordered" method="get" action="https://www.google.com/search">
       <input id="searchbox"
         type="text"
         name="q"
