--- a/index.html
+++ b/index.html
@@ -6,57 +6,10 @@
   <title>hm</title>
 </head>
 <body>
-  <div id="container" class="bordered">
-    <form id="search" class="bordered" method="get" action="https://www.google.com/search">
-      <input id="searchbox"
-        type="text"
-        name="q"
-        value=""
-        placeholder="search"
-        autocomplete="off"
-        autofocus
-      />
-      <input id="searchsubmit" type="submit" value="->" />
-    </form>
-    <div id="links">
-      <div class="bordered">
-        <h1>Social</h1>
-        <ul>
-          <li><a href="http://reddit.com">reddit</a></li>
-          <li><a href="http://facebook.com">facebook</a></li>
-          <li><a href="http://messenger.com">messenger</a></li>
-        </ul>
-      </div>
-      <div class="bordered">
-        <h1>Work</h1>
-        <ul>
-          <li><a href="http://gmail.com">gmail</a></li>
-          <li><a href="http://mail.nyu.edu">mail</a></li>
-          <li><a href="http://drive.google.com">drive</a></li>
-        </ul>
-      </div>
-      <div class="bordered">
-        <h1>Commerce</h1>
-        <ul>
-          <li><a href="http://amazon.com">amazon</a></li>
-          <li><a href="http://ebay.com">ebay</a></li>
-          <li><a href="http://massdrop.com">massdrop</a></li>
-        </ul>
-      </div>
-      <div class="bordered">
-        <h1>Coding</h1>
-        <ul>
-          <li><a href="http://github.com/jaswon5791">github</a></li>
-          <li><a href="http://jaswon.tech">blog</a></li>
-          <li><a href="http://stackoverflow.com">stackoverflow</a></li>
-        </ul>
-      </div>
-    </div>
-    <div id="terminal" tabindex='1'>
-      <div id="log">
-        <ul id="lines"></ul>
-        <span>&gt; </span><span id="input"></span><span id="caret">0</span>
-      </div>
+  <div id="terminal" tabindex='1' class="bordered">
+    <div id="log">
+      <ul id="lines"></ul>
+      <span>&gt; </span><span id="input"></span><span id="caret">0</span>
     </div>
   </div>
   <script src="terminal.js"></script>
